--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				 		<div class="col-6">
 
 
-							<a href="Index.html" class="logo-link">
+							<a href="https://jeffreyej.github.io/WEBDESIGN-made-simple/" class="logo-link">
 		 					 <img src="./src/img/webdesign-logo.png" alt="Logo WEBDESIGN made simple">
 		 				 </a>
 
