--- a/impressum.html
+++ b/impressum.html
@@ -17,7 +17,7 @@
 	<meta name="msapplication-config" content="./src/img/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 
-	
+
 	<!-- AUTOREN-STYLESHEET -->
 	<link rel="stylesheet" type="text/css" href="./src/css/styles.min.css">
 </head>
@@ -60,7 +60,7 @@
 				<div class="col-6">
 
 
-					<a href="Index.html" class="logo-link">
+					<a href="index.html" class="logo-link">
 					 <img src="src/img/webdesign-logo.png" alt="Das Logo WEBDESIGN made simple">
 				 </a>
 
