--- a/kontakt.html
+++ b/kontakt.html
@@ -35,7 +35,7 @@
 			 		<div class="col-6">
 
 
-						<a href="Index.html" class="logo-link">
+						<a href="index.html" class="logo-link">
 	 					 <img src="src/img/webdesign-logo.png" alt="Das Logo WEBDESIGN made simple">
 	 				 </a>
 
