--- a/impressum.html
+++ b/impressum.html
@@ -60,7 +60,7 @@
 				<div class="col-6">
 
 
-					<a href="index.html" class="logo-link">
+					<a href="https://jeffreyej.github.io/WEBDESIGN-made-simple/index.html" class="logo-link">
 					 <img src="src/img/webdesign-logo.png" alt="Das Logo WEBDESIGN made simple">
 				 </a>
 
