--- a/leistungen.html
+++ b/leistungen.html
@@ -41,7 +41,7 @@
 					 </a>
 
 					 <ul>
-							<li><a href="index.html">Startseite</a></li>
+							<li><a href="https://jeffreyej.github.io/WEBDESIGN-made-simple/index.html">Startseite</a></li>
 							<li class="active"><a href="leistungen.html">Leistungen</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							<li><a href="impressum.html">Impressum</a></li>
